refactor: 完成 scim 服务接口以及功能性测试和项目结构重构
