# docs/swagger.yaml
@@ -76,12 +76,27 @@ definitions:
         description: 成员显示名称
         type: string
       type:
+        allOf:
+        - $ref: '#/definitions/model.MemberType'
         description: 成员类型（User或Group）
-        type: string
       value:
         description: 成员ID（用户或组）
         type: string
     type: object
+  model.MemberType:
+    enum:
+    - User
+    - Group
+    type: string
+    x-enum-comments:
+      MemberTypeGroup: 组类型
+      MemberTypeUser: 用户类型
+    x-enum-descriptions:
+    - 用户类型
+    - 组类型
+    x-enum-varnames:
+    - MemberTypeUser
+    - MemberTypeGroup
   model.Meta:
     properties:
       created:
@@ -205,7 +220,6 @@ definitions:
         description: 组ID
         type: string
     type: object
-host: localhost:8080
 info:
   contact:
     email: shoy160@qq.com
@@ -473,6 +487,52 @@ paths:
       tags:
       - Groups
   /Groups/{id}/members:
+    get:
+      consumes:
+      - application/json
+      description: 获取指定组的成员列表，支持分页和成员类型过滤
+      parameters:
+      - description: 组ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: 起始索引（从1开始）
+        in: query
+        name: startIndex
+        type: integer
+      - description: 每页数量
+        in: query
+        name: count
+        type: integer
+      - description: 成员类型过滤（User或Group）
+        in: query
+        name: memberType
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 组成员列表
+          schema:
+            $ref: '#/definitions/model.ListResponse'
+        "401":
+          description: 未授权
+          schema:
+            $ref: '#/definitions/model.ErrorResponse'
+        "404":
+          description: 组不存在
+          schema:
+            $ref: '#/definitions/model.ErrorResponse'
+        "500":
+          description: 服务器内部错误
+          schema:
+            $ref: '#/definitions/model.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: 获取组成员
+      tags:
+      - Groups
     post:
       consumes:
       - application/json
